# SudokoSolver-with-opencv-Cpp-and-Pytorch

./: README.md
Digit Classifier/: DigitClassifier.ipynb
SodukuSolver opencv/: CMakeLists.txt  main.cpp
SodukuSolver opencv/include/: detect_digits.cpp  solve.cpp  sudoku_preprocess.cpp  utils.h
SodukuSolver opencv/model/: lenet-2-SodukuImg.onnx  lenet-2.onnx  lenet.onnx
SudokuSolver  opencv/: SudokuSolver  opencv.sln
SudokuSolver  opencv/SudokuSolver  opencv/: SudokuSolver  opencv.vcxproj  SudokuSolver  opencv.vcxproj.filters  detect_digits.cpp  main.cpp  solve.cpp  sudoku_preprocess.cpp  utils.h
SudokuSolver  opencv/SudokuSolver  opencv/Release/: SudokuSolver  opencv.exe.recipe  SudokuSolver  opencv.iobj  SudokuSolver  opencv.ipdb  SudokuSolver  opencv.vcxproj.FileListAbsolute.txt
SudokuSolver  opencv/SudokuSolver  opencv/Release/SudokuSo.65fc2063.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SudokuSolver  opencv.lastbuildstate  SudokuSolver  opencv.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SudokuSolver  opencv/SudokuSolver  opencv/model/: SGD_20epoch_lenet.onnx  adam_20epoch_lenet.onnx
